--- a/app/nov.html
+++ b/app/nov.html
@@ -23,7 +23,7 @@
 	<![endif]-->
 </head>
 
-<body class="theme-blue">
+<body class="theme-brown">
 
 <!-- begin header -->
 <header class="header">
@@ -138,28 +138,31 @@
 
 			<div class="main-banner__img"  uk-scrollspy="cls:border-anim">
 				<picture>
-					<source srcset="img/media/main-banner-3-1440x730.png" media="(min-width: 961px)">
-					<source srcset="img/media/main-banner-3-960x487-tablet.png" media="(min-width: 641px) and (max-width: 960px)">
-					<source srcset="img/media/main-banner-3-640x325-mob-xs.png" media="(max-width: 640px)">
-					<img src="img/media/main-banner-3-1440x730.png" alt="">
+					<source srcset="img/media/main-banner-5-1440x730.png" media="(min-width: 961px)">
+					<source srcset="img/media/main-banner-5-960x487-tablet.png" media="(min-width: 641px) and (max-width: 960px)">
+					<source srcset="img/media/main-banner-5-640x325-mob-xs.png" media="(max-width: 640px)">
+					<img src="img/media/main-banner-5-1440x730.png" alt="">
 				</picture>
 			</div>
 			<div class="main-banner__text">
 				<div class="main-banner__title">
-					<h1 uk-scrollspy="cls:slide-up">Когда качество имеет размер!</h1>
+					<h1 uk-scrollspy="cls:slide-up">Продукт, доступный каждому!</h1>
 				</div>
 				<div class="main-banner__subtitle">
-					для силы и здоровья
+					просто и вкусно
 				</div>
 				<svg width="29px" height="67px" class="main-banner__arrow-down">
 				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#arrow-down"></use>
 				</svg>
 			</div>
 						<div class="fly-box " uk-scrollspy="cls: slide-up-abs uk-visible; delay: 500">
-				<img src="img/media/egg-box-2.png" alt="Лето">
+				<img src="img/media/egg-box-4.png" alt="Лето">
 			</div>
 					</div>
 	</div>
+	
+	
+
 	
 	
 
@@ -173,10 +176,10 @@
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-15.svg" alt="" uk-img>
+								<img data-src="img/media/advantage-img/advantage-img-24.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Самое большое содержание белка</div>
+								<div class="title-h3">Необходимый продукт в рационе каждого члена семьи и незаменимый в кулинарии</div>
 							</div>
 						</div>
 					</li>
@@ -186,10 +189,10 @@
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-16.svg" alt="" uk-img>
+								<img data-src="img/media/advantage-img/advantage-img-25.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Натурально и вкусно как в деревне</div>
+								<div class="title-h3">Качество по разумной цене</div>
 							</div>
 						</div>
 					</li>
@@ -199,10 +202,10 @@
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-17.svg" alt="" uk-img>
+								<img data-src="img/media/advantage-img/advantage-img-26.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Выбор мужской аудитории по исследованиям потребителей</div>
+								<div class="title-h3">Производство в соответствии с ГОСТ 31654-2012</div>
 							</div>
 						</div>
 					</li>
@@ -212,10 +215,10 @@
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-18.svg" alt="" uk-img>
+								<img data-src="img/media/advantage-img/advantage-img-27.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Только самые крупные яйца используются в производстве марки (СО и С1)</div>
+								<div class="title-h3">Широкий ассортимент категорий</div>
 							</div>
 						</div>
 					</li>  
@@ -227,15 +230,14 @@
 					<svg width="100%" height="100%" class="yellow-ellipse-2">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
 					</svg>
-					<img src="img/media/advantage-img/egg-blue.png" alt="">
+					<img src="img/media/advantage-img/egg-brown.png" alt="">
 				</div>
 			</div>
 		</div>
 	</section>
-	
-	
-
 		
+
+
 <div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 	<div class="uk-container">
 		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Большим яйцам — специальная упаковка</h2>
@@ -249,12 +251,12 @@
 					</div>
 					<div class="content-img">
 						<svg width="80px" height="93px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-1"></use>
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-2"></use>
 						</svg>
 					</div>
 				</div>
 				<div class="item__text">
-					Прочная упаковка выдержит кастрюлю, поставленную сверху
+					Экологичная упаковка из переработанной бумаги
 				</div>
 			</li>
 
@@ -266,13 +268,13 @@
 						</svg>
 					</div>
 					<div class="content-img">
-						<svg width="80px" height="63px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-8"></use>
+						<svg width="123px" height="86px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-11"></use>
 						</svg>
 					</div>
 				</div>
 				<div class="item__text">
-					Cпециальная упаковка для особо крупных яиц (СВ)
+					Самый распространённый вид упаковки на полках магазинов
 				</div>
 			</li>
 
@@ -284,27 +286,27 @@
 						</svg>
 					</div>
 					<div class="content-img">
-						<svg width="97px" height="80px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-9"></use>
+						<svg width="112px" height="32px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-12"></use>
 						</svg>
 					</div>
 				</div>
 				<div class="item__text">
-					Упаковка повышенной прочности для яиц большого размера
+					Дополнительные ребра жесткости для надежной транспортировки
 				</div>
 			</li>
 		</ul>
 	</div>
 </div>
 
-
-
 	
+
+
 	<div class="typebox-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Виды упаковки</h2>
 
-			<ul class="typebox-list" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+			<ul class="typebox-list typebox-list--four-elements" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 
 				<li class="item">
 					<div class="item__img">
@@ -314,12 +316,12 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-4.png" alt="" uk-img>
+							<img data-src="img/media/box-type-8.png" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Крупные, насколько это только возможно!</div>
-						<div class="item__subtitle">10 яиц СВ (75+ грамм)</div>
+						<div class="title-h3">Вторая категория</div>
+						<div class="item__subtitle">10 яиц (45-54,9 грамм)</div>
 					</div>
 				</li>
 
@@ -331,12 +333,12 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-5.png" alt="" uk-img>
+							<img data-src="img/media/box-type-9.png" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Большие и натуральные</div>
-						<div class="item__subtitle">10 яиц СО (65-74,9 грамм)</div>
+						<div class="title-h3">Первая категория</div>
+						<div class="item__subtitle">10 яиц (55-64,9 грамм)</div>
 					</div>
 				</li>
 
@@ -348,12 +350,29 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-6.png" alt="" uk-img>
+							<img data-src="img/media/box-type-10.png" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Еще больше в одной упаковке</div>
-						<div class="item__subtitle">15 яиц СО (65-74,9 грамм) </div>
+						<div class="title-h3">Отборная категория</div>
+						<div class="item__subtitle">10 яиц (65-74,9 грамм)</div>
+					</div>
+				</li>
+
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="typebox-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
+							</svg> 
+						</div>
+						<div class="content-img">
+							<img data-src="img/media/box-type-11.png" alt="" uk-img>
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">Третья категория</div>
+						<div class="item__subtitle">20 яиц (35-44,9 грамм)</div>
 					</div>
 				</li>
 
@@ -361,8 +380,6 @@
 
 		</div>
 	</div>
-
-
 		<!-- begin brands-slider -->
 	<div class="brands-slider preload">
 		<h2 class="uk-text-center">Купить онлайн</h2>
