--- a/app/now.html
+++ b/app/now.html
@@ -146,17 +146,17 @@
 			</div>
 			<div class="main-banner__text">
 				<div class="main-banner__title">
-					<h1 uk-scrollspy="cls:slide-up">Когда качество имеет размер!</h1>
+					<h1 uk-scrollspy="cls:slide-up">Продукт, доступный каждому!</h1>
 				</div>
 				<div class="main-banner__subtitle">
-					для силы и здоровья
+					просто и вкусно
 				</div>
 				<svg width="29px" height="67px" class="main-banner__arrow-down">
 				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#arrow-down"></use>
 				</svg>
 			</div>
 						<div class="fly-box " uk-scrollspy="cls: slide-up-abs uk-visible; delay: 500">
-				<img src="img/media/egg-box-2.png" alt="Лето">
+				<img src="img/media/egg-box-4.png" alt="Лето">
 			</div>
 					</div>
 	</div>
@@ -233,8 +233,6 @@
 		</div>
 	</section>
 	
-	
-
 		
 <div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 	<div class="uk-container">
