--- a/app/company.html
+++ b/app/company.html
@@ -22,7 +22,6 @@
 		<script src="libs/placeholders.min.js"></script>
 	<![endif]-->
 </head>
-
 <body class="theme-green">
 
 <!-- begin header -->
@@ -129,9 +128,8 @@
 
 </header><!-- end header -->
 
-
+<main class="main-container">	
 	
-
 	
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
@@ -770,8 +768,7 @@
 	</section><!-- end news-section -->
 
 
-
-
+</main>
 <!-- begin footer -->
 <footer class="footer">
 	<div class="uk-container uk-container--medium">
@@ -885,8 +882,6 @@
 
 
 
-
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
@@ -896,8 +891,8 @@
 <script src="libs/countUp/countUp.min.js" defer></script>
 <script src="js/sliders.js" defer></script>
 <script src="js/flybox.js" defer></script>
+<script src="js/timer-app.js" defer></script>
 <script src="js/main.js" defer></script>
-
 
 </body>
 </html>
