--- a/app/nov.html
+++ b/app/nov.html
@@ -22,7 +22,6 @@
 		<script src="libs/placeholders.min.js"></script>
 	<![endif]-->
 </head>
-
 <body class="theme-brown">
 
 <!-- begin header -->
@@ -129,9 +128,8 @@
 
 </header><!-- end header -->
 
-
+<main class="main-container">	
 	
-
 	
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
@@ -156,7 +154,7 @@
 				</svg>
 			</div>
 						<div class="fly-box " uk-scrollspy="cls: slide-up-abs uk-visible; delay: 500">
-				<img data-src="img/media/egg-box-4.png" alt="Лето" uk-img>
+				<img src="img/media/egg-box-4.png" alt="Лето">
 			</div>
 					</div>
 	</div>
@@ -425,7 +423,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-1.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="2">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -440,7 +438,7 @@
 								</div>
 								<div class="circle-timer__value">2</div>
 							</div>
-							<div class="egg-section__text">Минуты</div>
+							<div class="circle-timer__text">Минуты</div>
 						</div>
 					</div>
 				</div>
@@ -450,7 +448,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-2.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="4">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -465,7 +463,7 @@
 								</div>
 								<div class="circle-timer__value">4</div>
 							</div>
-							<div class="egg-section__text">Минуты</div>
+							<div class="circle-timer__text">Минуты</div>
 						</div>
 					</div>
 				</div>
@@ -475,7 +473,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-3.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="6">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -490,7 +488,7 @@
 								</div>
 								<div class="circle-timer__value">6</div>
 							</div>
-							<div class="egg-section__text">Минут</div>
+							<div class="circle-timer__text">Минут</div>
 						</div>
 					</div>
 				</div>
@@ -500,7 +498,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-4.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="8">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -515,7 +513,7 @@
 								</div>
 								<div class="circle-timer__value">8</div>
 							</div>
-							<div class="egg-section__text">Минут</div>
+							<div class="circle-timer__text">Минут</div>
 						</div>
 					</div>
 				</div>
@@ -525,7 +523,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-5.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="10">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -540,7 +538,7 @@
 								</div>
 								<div class="circle-timer__value">10</div>
 							</div>
-							<div class="egg-section__text">Минут</div>
+							<div class="circle-timer__text">Минут</div>
 						</div>
 					</div>
 				</div>
@@ -550,7 +548,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-6.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="15">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -565,7 +563,7 @@
 								</div>
 								<div class="circle-timer__value">15</div>
 							</div>
-							<div class="egg-section__text">Минут</div>
+							<div class="circle-timer__text">Минут</div>
 						</div>
 					</div>
 				</div>
@@ -641,8 +639,7 @@
 		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все факты о яйце</span></a>
 	</div>
 </section>
-
-
+</main>
 <!-- begin footer -->
 <footer class="footer">
 	<div class="uk-container uk-container--medium">
@@ -756,8 +753,6 @@
 
 
 
-
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
@@ -767,8 +762,8 @@
 <script src="libs/countUp/countUp.min.js" defer></script>
 <script src="js/sliders.js" defer></script>
 <script src="js/flybox.js" defer></script>
+<script src="js/timer-app.js" defer></script>
 <script src="js/main.js" defer></script>
-
 
 </body>
 </html>
