--- a/app/company.html
+++ b/app/company.html
@@ -243,8 +243,11 @@
 			</div>
 			<div class="about-egg__text">
 				<p>
-					Миссия нашей компании — бережно сохранять и нести людям ценность яйца, которое остаётся неизменным в потреблении
-					 человеком на протяжении тысячелетий.
+					Яйцо — один из немногих продуктов, остающийся неизменным в потреблении человеком на протяжении тысячелетий.
+				</p>
+				<p>
+					Миссия нашей компании <br> 
+					— бережно сохранять и нести людям ценность этого натурального продукта
 				</p>
 			</div>
 		</div>
@@ -284,8 +287,7 @@
 					</div>
 					<div class="item__text">
 						<div class="title-h3">Безопасность</div>
-						Система менеджмента безопасности пищевой продукции (СМБПП), основанная 
-						на требованиях стандарта ISO 22000:2018 
+						ГОСТ 31654-2012, система менеджмента безопасности пищевой продукции, основанная на требованиях стандарта ISO 22000:2018
 					</div>
 				</li>
 
@@ -302,7 +304,7 @@
 					</div>
 					<div class="item__text">
 						<div class="title-h3">Свежесть</div>
-						Прямые контракты с ключевыми розничными сетями позволяют работать без склада
+						Прямые контракты с ключевыми розничными сетями позволяют доставлять продукцию покупателям максимально быстро
 					</div>
 				</li>
 			</ul>
@@ -383,7 +385,7 @@
 
 	<section class="slider-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container uk-container--small">
-			<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Самое ценное для нас – люди, которые работают для Вас</h2>
+			<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Главная наша сила –люди, которые работают для Вас</h2>
 			<!-- begin composition-slider -->
 			<div class="custom-slider" uk-scrollspy="cls: slide-up; delay: 300">
 				<div class="uk-container">
@@ -432,7 +434,6 @@
 							<div class="round-item__text">
 								<div class="title-h3">Производство <br> кормов</div>
 							</div>
-							<a href="" class="btn"><span>Предложить сырье</span></a>
 						</div>
 					</li>
 					<li>
@@ -470,9 +471,8 @@
 								<img data-src="img/media/advantage-img/advantage-img-13.svg" alt="" uk-img>
 							</div>
 							<div class="round-item__text">
-								<div class="title-h3">Сортировка и упаковка <br> готовой продукции</div>
+								<div class="title-h3">Сортировка и упаковка <br> продукции</div>
 							</div>
-							<a href="" class="btn"><span>Предложить сырье</span></a>
 						</div>
 					</li>
 					<li>
@@ -484,9 +484,8 @@
 								<img data-src="img/media/advantage-img/advantage-img-14.svg" alt="" uk-img>
 							</div>
 							<div class="round-item__text">
-								<div class="title-h3">Отгрузка готовой продукции <br> с нашего склада и доставка до магазинов</div>
+								<div class="title-h3">Доставка продукции до магазинов</div>
 							</div>
-							<a href="" class="btn"><span>Предложить сырье</span></a>
 						</div>
 					</li>
 				</ul>
@@ -882,7 +881,8 @@
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script> -->
+<script src="libs/jquery.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
