--- a/app/nov.html
+++ b/app/nov.html
@@ -174,19 +174,6 @@
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-24.svg" alt="" uk-img>
-							</div>
-							<div class="advantage-item__text">
-								<div class="title-h3">Необходимый продукт в рационе каждого члена семьи и незаменимый в кулинарии</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="advantage-item">
-							<div class="advantage-item__img">
-								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
-								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-25.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -200,10 +187,23 @@
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-24.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Основной продукт в рационе семьи и незаменимый в кулинарии</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-26.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Производство в соответствии с ГОСТ 31654-2012</div>
+								<div class="title-h3">Производство в соответствии <br> с ГОСТ 31654-2012</div>
 							</div>
 						</div>
 					</li>
@@ -216,7 +216,7 @@
 								<img data-src="img/media/advantage-img/advantage-img-27.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Широкий ассортимент категорий</div>
+								<div class="title-h3">Широкий ассортимент категорий (СО, С1, С2, С3)</div>
 							</div>
 						</div>
 					</li>  
@@ -238,7 +238,7 @@
 
 <div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 	<div class="uk-container">
-		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Большим яйцам — специальная упаковка</h2>
+		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Любимый продукт в самом популярном формате</h2>
 		<ul class="advantages-h-list advantages-h-list--three-items">
 			<li class="item">
 				<div class="item__img">
@@ -305,23 +305,23 @@
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Виды упаковки</h2>
 
 			<ul class="typebox-list typebox-list--four-elements" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
-
 				<li class="item">
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-8.png" alt="" uk-img>
+							<img data-src="img/media/box-type-10.png" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Вторая категория</div>
-						<div class="item__subtitle">10 яиц (45-54,9 грамм)</div>
+						<div class="title-h3">Отборная категория</div>
+						<div class="item__subtitle">10 яиц (65-74,9 грамм)</div>
 					</div>
 				</li>
+
 
 				<li class="item">
 					<div class="item__img">
@@ -344,16 +344,16 @@
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-10.png" alt="" uk-img>
+							<img data-src="img/media/box-type-8.png" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Отборная категория</div>
-						<div class="item__subtitle">10 яиц (65-74,9 грамм)</div>
+						<div class="title-h3">Вторая категория</div>
+						<div class="item__subtitle">10 яиц (45-54,9 грамм)</div>
 					</div>
 				</li>
 
@@ -407,13 +407,16 @@
 	
 <section class="time-section">
 	<div class="uk-container uk-container--small">
-		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Сколько времени варить яйца?</h2>
+		<!-- <h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Сколько времени варить яйца?</h2> -->
 		<a href="/timer.html" class="btn btn--icon uk-margin-auto icon-clock" uk-scrollspy="cls:slide-up; delay: 100"><span>попробуйте наш таймер</span></a>
 		
 <div class="eggs-section" uk-scrollspy="cls: slide-up svg-animate;">
 
 <div class="custom-slider">
 	<div class="slider">
+		<div class="slide">
+			<img data-lazy="img/media/sliders/info.png" alt="">
+		</div>
 		<div class="slide">
 			<div class="uk-grid uk-child-width-1-3@m uk-child-width-1-2" uk-grid>
 			
@@ -596,7 +599,6 @@
 </div>
 
 </div>
-
 		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все рецепты</span></a>
 	</div>
 </section>
@@ -753,7 +755,8 @@
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script> -->
+<script src="libs/jquery.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
