--- a/app/index.html
+++ b/app/index.html
@@ -460,13 +460,16 @@
 	
 <section class="time-section">
 	<div class="uk-container uk-container--small">
-		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Сколько времени варить яйца?</h2>
+		<!-- <h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Сколько времени варить яйца?</h2> -->
 		<a href="/timer.html" class="btn btn--icon uk-margin-auto icon-clock" uk-scrollspy="cls:slide-up; delay: 100"><span>попробуйте наш таймер</span></a>
 		
 <div class="eggs-section" uk-scrollspy="cls: slide-up svg-animate;">
 
 <div class="custom-slider">
 	<div class="slider">
+		<div class="slide">
+			<img data-lazy="img/media/sliders/info.png" alt="">
+		</div>
 		<div class="slide">
 			<div class="uk-grid uk-child-width-1-3@m uk-child-width-1-2" uk-grid>
 			
@@ -649,7 +652,6 @@
 </div>
 
 </div>
-
 		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все рецепты</span></a>
 	</div>
 </section>
@@ -806,7 +808,8 @@
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script> -->
+<script src="libs/jquery.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
