--- a/app/junior.html
+++ b/app/junior.html
@@ -201,7 +201,7 @@
 								<img data-src="img/media/advantage-img/advantage-img-21.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Эффективно взбивается и держит форму</div>
+								<div class="title-h3">Белки лучше взбиваются в густую пену и держат форму</div>
 							</div>
 						</div>
 					</li>
@@ -214,7 +214,7 @@
 								<img data-src="img/media/advantage-img/advantage-img-22.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">ТКуры несушки High-line Brown</div>
+								<div class="title-h3">Куры несушки Hisex Brown</div>
 							</div>
 						</div>
 					</li>  
@@ -282,7 +282,7 @@
 					</div>
 				</div>
 				<div class="item__text">
-					Яркая красочная упаковка
+					Яркий дизайн с детской тематикой
 				</div>
 			</li>
 
@@ -328,8 +328,8 @@
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
-						<div class="item__subtitle">10 яиц СВ (75+ грамм)</div>
+						<div class="title-h3">Junior Blue</div>
+						<div class="item__subtitle">15 C2 (45-54,9 грамм)</div>
 					</div>
 				</li>
 
@@ -345,8 +345,8 @@
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
-						<div class="item__subtitle">15 яиц С2 (45-54,9 грамм)</div>
+						<div class="title-h3">Junior Pink</div>
+						<div class="item__subtitle">15 C2 (45-54,9 грамм)</div>
 					</div>
 				</li>
 
@@ -362,8 +362,8 @@
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
-						<div class="item__subtitle">15 яиц СО (65-74,9 грамм)</div>
+						<div class="title-h3">Junior Green</div>
+						<div class="item__subtitle">15 C2 (45-54,9 грамм)</div>
 					</div>
 				</li>
 			</ul>
@@ -400,13 +400,16 @@
 	
 <section class="time-section">
 	<div class="uk-container uk-container--small">
-		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Сколько времени варить яйца?</h2>
+		<!-- <h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Сколько времени варить яйца?</h2> -->
 		<a href="/timer.html" class="btn btn--icon uk-margin-auto icon-clock" uk-scrollspy="cls:slide-up; delay: 100"><span>попробуйте наш таймер</span></a>
 		
 <div class="eggs-section" uk-scrollspy="cls: slide-up svg-animate;">
 
 <div class="custom-slider">
 	<div class="slider">
+		<div class="slide">
+			<img data-lazy="img/media/sliders/info.png" alt="">
+		</div>
 		<div class="slide">
 			<div class="uk-grid uk-child-width-1-3@m uk-child-width-1-2" uk-grid>
 			
@@ -589,7 +592,6 @@
 </div>
 
 </div>
-
 		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все рецепты</span></a>
 	</div>
 </section>
@@ -746,7 +748,8 @@
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script> -->
+<script src="libs/jquery.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
