--- a/app/nov.html
+++ b/app/nov.html
@@ -80,17 +80,13 @@
 		<ul class="main-nav">
 			<li>
 				<a href="/">
-					<svg width="82px" height="59px" class="nav-ellipse">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-1"></use>
-					</svg>
+					<img width="82px" height="59px" data-src="img/icon-svg/nav-ellipse-1.svg" alt="" uk-img>
 					<span>Лето</span>
 				</a>
 			</li>
 			<li>
 				<a href="ugodie.html">
-					<svg width="233px" height="71px" class="nav-ellipse">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-2"></use>
-					</svg>
+					<img width="233px" height="71px" data-src="img/icon-svg/nav-ellipse-2.svg" alt="" uk-img>
 					<span>Деревенское угодье</span>
 				</a>
 			</li>
@@ -101,17 +97,13 @@
 			</li>
 			<li>
 				<a href="junior.html">
-					<svg class="nav-ellipse">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-3"></use>
-					</svg>
+					<img width="92px" height="55px" data-src="img/icon-svg/nav-ellipse-3.svg" alt="" uk-img>
 					<span>Junior</span>
 				</a>
 			</li>
 			<li>
 				<a href="nov.html">
-					<svg class="nav-ellipse">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-4"></use>
-					</svg>
+					<img width="161px" height="56px" data-src="img/icon-svg/nav-ellipse-4.svg" alt="" uk-img>
 					<span>Сельская новь</span>
 				</a>
 			</li>
@@ -755,8 +747,7 @@
 
 
 
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script> -->
-<script src="libs/jquery.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
