правка верстки+prealoder

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,13 @@
 	<![endif]-->
 </head>
 <body class="theme-green">
-
+	<div class="preloader">
+		<div class="preloader__indicator">
+			<img src="img/preloader.gif" alt="">
+			<div class="preloader__indicator-value">0%</div>
+		</div>
+	</div>
+	
 <!-- begin header -->
 <header class="header">
 	<div class="header__desk ">
@@ -120,8 +126,8 @@
 
 </header><!-- end header -->
 
-<main class="main-container">	
-	
+	<main class="main-container">	
+		
 	
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
@@ -151,7 +157,7 @@
 					</div>
 	</div>
 	
-		<section class="advantages-section ">
+		<section class="advantages-section">
 		<div class="uk-container">
 			<div class="advantages-section__inner">
 				<ul class="advantages-list advantages-list--six-items">
@@ -244,7 +250,7 @@
 								<img data-src="img/media/advantage-img/advantage-img-6.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Размер — CО и С1</div>
+								<div class="title-h3">Оптимальный размер</div>
 								<div class="text">
 									Используются столовые яйца отборной и первой категории (СО и С1)
 								</div>
@@ -686,8 +692,8 @@
 		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все факты о яйце</span></a>
 	</div>
 </section>
-</main>
-<!-- begin footer -->
+	</main>
+	<!-- begin footer -->
 <footer class="footer">
 	<div class="uk-container uk-container--medium">
 		<div class="footer__top">
@@ -796,11 +802,11 @@
 </footer><!-- end footer -->
 
 
+	
 
 
 
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
