--- a/app/timer.html
+++ b/app/timer.html
@@ -23,7 +23,13 @@
 	<![endif]-->
 </head>
 <body class="theme-green">
-
+	<div class="preloader">
+		<div class="preloader__indicator">
+			<img src="img/preloader.gif" alt="">
+			<div class="preloader__indicator-value">0%</div>
+		</div>
+	</div>
+	
 <!-- begin header -->
 <header class="header">
 	<div class="header__desk ">
@@ -120,8 +126,8 @@
 
 </header><!-- end header -->
 
-<main class="main-container">	
-	
+	<main class="main-container">	
+		
 	<!-- begin timer-section -->
 	<section class="timer-section">
 		<div class="uk-container uk-container--small">
@@ -218,8 +224,8 @@
 	</div>
 </section>
 
-</main>
-<!-- begin footer -->
+	</main>
+	<!-- begin footer -->
 <footer class="footer">
 	<div class="uk-container uk-container--medium">
 		<div class="footer__top">
@@ -328,11 +334,11 @@
 </footer><!-- end footer -->
 
 
+	
 
 
 
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
