--- a/app/company.html
+++ b/app/company.html
@@ -23,7 +23,13 @@
 	<![endif]-->
 </head>
 <body class="theme-green">
-
+	<div class="preloader">
+		<div class="preloader__indicator">
+			<img src="img/preloader.gif" alt="">
+			<div class="preloader__indicator-value">0%</div>
+		</div>
+	</div>
+	
 <!-- begin header -->
 <header class="header">
 	<div class="header__desk ">
@@ -120,8 +126,8 @@
 
 </header><!-- end header -->
 
-<main class="main-container">	
-	
+	<main class="main-container">	
+		
 	
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
@@ -759,8 +765,8 @@
 	</section><!-- end news-section -->
 
 
-</main>
-<!-- begin footer -->
+	</main>
+	<!-- begin footer -->
 <footer class="footer">
 	<div class="uk-container uk-container--medium">
 		<div class="footer__top">
@@ -869,11 +875,11 @@
 </footer><!-- end footer -->
 
 
+	
 
 
 
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
